--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
     "sharp": "^0.33.5",
+    "tailwindcss": "3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.1.1"
   }
