--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/themes": "^2.0.1",
     "@types/chrome": "^0.0.260",
+    "@types/lodash": "^4.17.17",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
